image alignment fixed

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -98,7 +98,7 @@ ul {
   display: grid;
   grid-template-columns: auto auto;
   grid-template-rows: auto auto auto;
-  grid-gap: 0;
+  
 }
 
 
@@ -118,23 +118,18 @@ ul {
 
 }
 
-.trans-para {
-  
-}
-
-.trans-learn {
-  
-}
-
 .transform-img {
+  
   grid-column: 2 / span 1;
   grid-row: 1 / span 1;
+  height: 600px;
   
 }
 
 .stand-out-img {
   grid-column: 1 / span 1;
   grid-row: 2 / span 1;
+  height: 600px;
 }
 
 .stand-out-txt {
@@ -145,11 +140,13 @@ ul {
 .cherry-img {
   grid-column: 1 / span 1;
   grid-row: 3 / span 1;
+  height: 600px;
 }
 
 .orange-img {
   grid-column: 2 / span 1;
   grid-row: 3 / span 1;
+  height: 600px;
 }
 
 h3 {
@@ -166,6 +163,10 @@ h5 {
   color: $Neutral_1;
   text-transform: uppercase;
 }
+
+
+
+
 
 
 .detail-para {
